<resources xmlns:android="http://schemas.android.com/tools">

    <!--Facebook Login-->
    <string name="facebook_app_id">729057740617416</string>
    <string name="fb_login_protocol_scheme">fb729057740617416</string>
    <!--Twitter Login-->
    <string name="twitter_consumer_key">vB92b5Y9G7TXMbJieJ2gxhUpN</string>
    <string name="twitter_consumer_secret_key">I1iapguZX0yH45BZJviYdym4flXie7MTevezlSj3JmasIBXMd6</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--Common-->
    <string name="message_no_internet_connection">No internet connection. Please check connection and try again</string>
    <string name="message_unknown_error">Something errors happened. Please try again</string>
    <string name="message_connection_timeout">Connection time out</string>
    <string name="error_title">ERROR</string>
    <string name="confirm_title">Confirm</string>
    <string name="success">SUCCESS</string>
    <string name="permission">PERMISSION</string>
    <string name="location">LOCATION</string>
    <string name="message_ask_enable_location">Your GPS seems to be disabled, do you want to enable it?</string>
    <string name="message_share_success">This article has been shared on facebook</string>
    <string name="select_trip">Select trip</string>
    <string name="add_new_trip">Add new Trip</string>
    <string name="no_data_found">No data found</string>

    <!--Permission-->
    <string name="setting">SETTING</string>
    <string name="message_permission_rational">We need permissions to do some functions so that better for your experience</string>
    <string name="message_camera_permission_denied">Please allow app using camera by click on setting</string>
    <string name="message_external_storage_permission_denied">Please allow app access storage by click on setting</string>

    <!--Main-->
    <string name="guest_text">Guest</string>
    <string name="show_map">Show map</string>
    <string name="change_nation">CHANGE NATION</string>
    <!--Left Menu-->
    <string name="menu_info">Info</string>
    <string name="menu_mytrip">MyTrip</string>
    <string name="menu_experiences">Experiences</string>
    <string name="menu_favorites">Favorites</string>
    <string name="menu_support">Support</string>
    <string name="menu_login">Log in</string>
    <string name="menu_logout">Log out</string>
    <string name="message_ask_logout">Are you sure to log out?</string>
    <!--Right Menu-->
    <string name="no_nation_text">No nation yet</string>

    <!--Login-->
    <string name="username_or_email_text">Username Or Email</string>
    <string name="password_text">Password</string>
    <string name="login_text">log in</string>
    <string name="forgot_your_password_text">forgot your password</string>
    <string name="register_text">Register</string>
    <string name="login_facebook_text">log in with Facebook</string>
    <string name="login_twitter_text">log in with Twitter</string>
    <string name="message_empty_username_email">Please enter a username or email</string>
    <string name="message_empty_password">Please enter a password</string>
    <string name="message_password_incorrect">Password is incorrect</string>
    <string name="message_account_does_not_exist">Account does not exist</string>
    <string name="forgot_password">Forgot password</string>
    <string name="message_forgot_password">Please enter your username. iGoTrip will send to your email a new password:</string>
    <string name="username_or_email_hint">Username or Email</string>
    <string name="message_enter_username_or_email">Please enter your username or email</string>
    <string name="message_username_or_email_does_not_exists">Username or email does not exists</string>
    <string name="message_forgot_password_success">Request new password sent successfully. iGoTrip will send to your email a new password as soon as possible. Thank you for using the app!</string>

    <!--Register-->
    <string name="submit_text">submit</string>
    <string name="male_text">Male</string>
    <string name="female_text">Female</string>
    <string name="username_text">Username</string>
    <string name="email_text">Email</string>
    <string name="full_name_text">Full name</string>
    <string name="repassword_text">Re-enter password</string>
    <string name="message_empty_username">Please enter a username</string>
    <string name="message_empty_email">Please enter an email address</string>
    <string name="message_email_invalid">Email address is incorrect</string>
    <string name="message_password_does_not_match">Confirm password does not match</string>
    <string name="message_username_password_exists">Username or Email already exists</string>


    <!--Info-->
    <string name="info">INFO</string>
    <string name="phone">PHONE</string>
    <string name="email">EMAIL</string>
    <string name="full_name">FULL NAME</string>
    <string name="birthday">BIRTHDAY</string>
    <string name="address">ADDRESS</string>
    <string name="gender">GENDER</string>
    <string name="account_type">ACCOUNT TYPE</string>
    <string name="update_text">update</string>
    <string name="change_password_text">change password</string>
    <string name="add_your_phone_number">Add your phone number</string>
    <string name="add_your_email_address">Add your email address</string>
    <string name="add_your_full_name">Add your full name</string>
    <string name="add_your_birthday">Add your birthday</string>
    <string name="add_your_address">Add your address</string>
    <string name="edit_your_phone_number">Edit your phone number</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="edit_your_email">Edit your email</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="edit_your_name">Edit your name</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="edit_your_address">Edit your address</string>
    <string name="enter_your_address">Enter your address</string>
    <string name="view_image">View image</string>
    <string name="choose_from_library">Choose from gallery</string>
    <string name="take_a_picture">Take a picture</string>
    <string name="options">Options</string>
    <string name="message_account_update_success">Account updated successfully</string>


    <!--Change Password-->
    <string name="change_password">CHANGE PASSWORD</string>
    <string name="current_password">Current password</string>
    <string name="new_password">New password</string>
    <string name="message_enter_current_password">Please enter the current password</string>
    <string name="message_enter_new_password">Please enter a new password</string>
    <string name="message_change_password_success">Password changed successfully</string>

    <!--Comment-->
    <string name="no_comments">No comment yet</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="edit_your_comment">Edit your comment</string>
    <string name="enter_new_comment">Enter new comment</string>

    <!--WriteComment-->
    <string name="write_comment">Write Comment</string>

    <!--Support-->
    <string name="support">SUPPORT</string>


    <!--Production-->
    <string name="app_market_link"></string>
    <string name="app_google_play_store_link"></string>

    <!--Temporary-->
    <!--rating dialog-->
    <string name="rate_us">Rate Us</string>
    <string name="rating_message">Please let us know, how can we improve ourselves?</string>
    <string name="rating_play_store_redirect_message_line_1">Awesome! Thank you for the 5 stars.</string>
    <string name="rating_play_store_redirect_message_line_2">Please help others, in knowing some good things about this app.</string>
    <string name="rating_play_store_text">Rate us on Play Store</string>
    <string name="rating_not_provided_error">Please provide us stars.</string>
    <string name="rating_thanks">Thank you!</string>
    <!--button-->
    <string name="later">Later</string>
    <string name="submit">Submit</string>

    <!--URLs-->
    <string name="support_url">http://kapategi.com/apps/api/v1/guide</string>

    <!--Province detail-->
    <string name="reload">Reload</string>

    <!--Create trip-->
    <string name="create_trip">Create trip</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="message_trip_name_empty">Please enter a trip name</string>
    <string name="message_trip_name_existed_format">The trip with name %s already exist. Please select another name</string>

    <!--Detail-->
    <string name="post_by">Post by</string>
    <string name="comment_format">Comments(%d)</string>
    <string name="btn_edit">edit</string>
    <string name="no_images">No images</string>

    <!--MyTrip-->
    <string name="my_trip">My trip</string>
    <string name="no_data">No data</string>
    <string name="message_confirm_delete">Are you sure you want to delete this trip?</string>

    <!--ShowMap-->
    <string name="select_province">Select province</string>

    <!--Favorites-->

    <!--DialogMarkerInfo-->

    <!--View Articles-->
    <string name="view_articles">View articles</string>

    <!--Post-->
    <string name="post">Post</string>
    <string name="update">Update</string>
    <string name="post_title">Title</string>
    <string name="post_description">Description</string>
    <string name="post_type">Type</string>
    <string name="post_pictures">Pictures</string>
    <string name="post_select_type">Select type</string>
    <string name="post_select_sub_type">Select sub type</string>
    <string name="post_add_pictures">Add pictures</string>
    <string name="post_select_address">Select address</string>
    <string name="pictures_format">Pictures(%d)</string>
    <string name="message_enter_title">Please enter article title</string>
    <string name="message_select_article_type">Please select a article type</string>
    <string name="message_add_pictures">Please add at least one picture</string>
    <string name="message_post_success">Article posted successfully</string>
    <string name="message_update_success">Article updated successfully</string>

    <!--Experiences-->
    <string name="delete_text">delete</string>

    <!--Add pictures-->
    <string name="add_pictures">Add pictures</string>

    <!--Direction-->
    <string name="direction">Direction</string>
    <string name="message_require_permission_when_denied_by_user">Please make sure you allowed application using location permission</string>
    <string name="distance_format">Distance: %s</string>
    <string name="duration_format">Duration: %s</string>
    <string name="start_format">Start: %s</string>
    <string name="end_format">End: %s</string>
    <string name="message_error_direction">Could not determine directions to this location</string>
    <string name="step_format">Step %d</string>

    <!--Keys-->
    <string name="google_maps_api_key">AIzaSyAJOvRk0MZNb4K9mixlVJgmhEH7C3_rDNI</string>

</resources>
