<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_background_launch">

    <include
        android:id="@+id/navBar"
        layout="@layout/nav_layout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/navBar"
        android:layout_marginEnd="@dimen/margin_padding_large"
        android:layout_marginStart="@dimen/margin_padding_large"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editCurrentPassword"
            style="@style/EditText"
            android:layout_marginTop="50dp"
            android:hint="@string/current_password"
            android:imeOptions="actionNext"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/editNewPassword"
            style="@style/EditText"
            android:layout_marginTop="@dimen/margin_padding_large"
            android:hint="@string/new_password"
            android:imeOptions="actionNext"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/editRePassword"
            style="@style/EditText"
            android:layout_marginTop="@dimen/margin_padding_large"
            android:hint="@string/repassword_text"
            android:imeOptions="actionDone"
            android:inputType="textPassword" />


        <Button
            android:id="@+id/btnSubmit"
            style="@style/Button.Primary"
            android:layout_marginTop="@dimen/margin_padding_very_large"
            android:text="@string/submit_text"
            android:textSize="@dimen/text_size_large" />

    </LinearLayout>

</RelativeLayout>