<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_background_launch">

    <ImageView
        android:id="@+id/imgClose"
        style="@style/Button.Secondary"
        android:layout_width="@dimen/img_close_size"
        android:layout_height="@dimen/img_close_size"
        android:layout_marginStart="@dimen/margin_padding_large"
        android:layout_marginTop="40dp"
        android:padding="@dimen/margin_padding_tiny"
        android:src="@drawable/ic_delete" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginEnd="@dimen/margin_padding_very_large"
        android:layout_marginStart="@dimen/margin_padding_very_large"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editUsernameEmail"
            style="@style/EditText"
            android:hint="@string/username_or_email_text"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress" />


        <EditText
            android:id="@+id/editPassword"
            style="@style/EditText"
            android:layout_marginTop="@dimen/margin_padding_normal"
            android:hint="@string/password_text"
            android:imeOptions="actionDone"
            android:inputType="textPassword" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_padding_large"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnLogin"
                style="@style/Button.Primary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="@dimen/margin_padding_very_large"
                android:paddingStart="@dimen/margin_padding_very_large"
                android:text="@string/login_text"
                android:textColor="@color/accent_white"
                android:textSize="@dimen/text_size_large" />

            <TextView
                android:id="@+id/txtForgotPassword"
                style="@style/Button.Secondary"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_gravity="bottom"
                android:layout_marginStart="@dimen/margin_padding_large"
                android:padding="@dimen/margin_padding_tiny"
                android:text="@string/forgot_your_password_text"
                android:textColor="@color/accent_white"
                android:textSize="@dimen/text_size_normal" />
        </LinearLayout>

        <Button
            android:id="@+id/btnRegister"
            style="@style/Button.Secondary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_padding_large"
            android:text="@string/register_text"
            android:textColor="@color/accent_white"
            android:textSize="@dimen/text_size_large" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/accent_white" />

        <LinearLayout
            android:id="@+id/llLoginFacebook"
            style="@style/Button.Facebook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_padding_very_large"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/margin_padding_very_small">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="30dp"
                android:layout_marginEnd="@dimen/margin_padding_large"
                android:layout_marginStart="@dimen/margin_padding_large"
                android:padding="3dp"
                android:src="@drawable/ic_facebook" />

            <View
                android:layout_width="1dp"
                android:layout_height="25dp"
                android:background="@color/accent_white" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/login_facebook_text"
                android:textColor="@color/accent_white"
                android:textSize="@dimen/text_size_normal" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llLoginTwitter"
            style="@style/Button.Twitter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_padding_normal"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/margin_padding_very_small">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="30dp"
                android:layout_marginEnd="@dimen/margin_padding_large"
                android:layout_marginStart="@dimen/margin_padding_large"
                android:padding="3dp"
                android:src="@drawable/ic_twitter" />

            <View
                android:layout_width="1dp"
                android:layout_height="25dp"
                android:background="@color/accent_white" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/login_twitter_text"
                android:textColor="@color/accent_white"
                android:textSize="@dimen/text_size_normal" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>